# StatusBot

./: .flake8  .gitignore  .pre-commit-config.yaml  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  address_tools.py  bot.py  check.sh  ci.sh  connection.py  create_installers.sh  files.json  install.sh  install_update.sh  looprun.sh  pingers.py  pyproject.toml  requirements.txt  run-quick.sh  run.sh  server_status.py  startup.sh  test-requirements.in  test-requirements.txt  update.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autodeps.yml  ci.yml  tests.yml
bot/: bot.py  force_update.py  gears.py  old bot.py  update.py
bot/config/: dms.json
bot/config/guilds/: 786711564748193793.json  863534282667982859.json
bot/status/: __init__.py  address_tools.py  connection.py  pingers.py  server_status.py
scripts/: create_installers.sh  gen_file_list.py  install.sh  install_update.sh  looprun.sh  run-quick.sh  run.sh  startup.sh  statusbot.service
src/StatusBot/: __init__.py  bot.py  decode_mods.py  force_update.py  gears.py  log.txt  update.py
src/statusbot/: __init__.py  bot.py  decode_mods.py  force_update.py  gears.py  statemachine.py  update.py  utils.py
tests/: test_statemachine.py
