[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StatusBot"
version = "0.8.2"
authors = [
  { name="CoolCat467" },
]
description = "Discord bot to watch people play minecraft and report"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["discord", "bot"]
dependencies = [
    "discord.py~=2.3.2",
    "python-dotenv~=1.0.0",
    "httpx[http2]~=0.25.0",
    "mcstatus~=11.1.0",
    "async-timeout~=4.0.3",
]

[project.urls]
"Homepage" = "https://github.com/CoolCat467/StatusBot"
"Source" = "https://github.com/CoolCat467/StatusBot"
"Bug Tracker" = "https://github.com/CoolCat467/StatusBot/issues"

[tool.setuptools.package-data]
StatusBot = ["py.typed"]

[project.scripts]
run_statusbot = "StatusBot:run"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py311']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT",  # flake8-2020
]
extend-ignore = [
    'E501',  # line-too-long
    "S101",  # use of assert for tests and type narrowing
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    minversion = 3.11.0
    envlist = py311, pycln, black, isort, pytest, flake8, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.11: py311, pytest, flake8, mypy

    [testenv]
    basepython = python3.11
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:flake8]
    deps =
        flake8
        flake8-bugbear
        flake8-noqa
    commands = flake8 src

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src

    [format]
    basepython = python3.11
    setenv =
        PYTHONPATH = {toxinidir}

    [format:pycln]
    deps =
        pycln
    commands = pycln src

    [format:black]
    deps =
        black
    commands = black src

    [format:isort]
    deps =
        isort
    commands = isort src
"""
