[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "statusbot"
dynamic = ["version"]
authors = [
  { name="CoolCat467", email="CoolCat467@duck.com" },
]
description = "Discord bot to watch people play minecraft and report"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["discord", "bot", "minecraft"]
dependencies = [
    "discord-py==2.6.4",
    "audioop-lts; python_version>='3.13'",
    "python-dotenv~=1.1.1",
    "httpx[http2]~=0.28.1",
    "mcstatus~=12.0.3",
    "async-timeout>=4.0.3",
]

[tool.setuptools.dynamic]
version = {attr = "statusbot.bot.__version__"}

[project.optional-dependencies]
tests = [
    "pytest>=5.0",
    "pytest-cov>=6.0.0",
    "pytest-trio>=0.8.0",
    "coverage>=7.2.5",
    "uv>=0.5.21",
]
tools = [
    'black>=24.10.0; implementation_name == "cpython"',
    "ruff>=0.9.2",
    "codespell>=2.3.0",
    "mypy>=1.15.0",
]

[project.urls]
"Source" = "https://github.com/CoolCat467/StatusBot"
"Bug Tracker" = "https://github.com/CoolCat467/StatusBot/issues"

[project.scripts]
run_statusbot = "statusbot:run"

[tool.setuptools.package-data]
StatusBot = ["py.typed"]

[tool.uv]
package = true

[tool.mypy]
files = ["src/statusbot/",]
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
disallow_any_unimported = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "CPY",   # flake8-copyright
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",     # one-blank-line-before-class
    "D204",     # one-blank-line-after-class
    "D211",     # no-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "D417",     # undocumented-param "Missing argument descriptions"
    "E501",     # line-too-long
    "S101",     # assert (use of assert for tests and type narrowing)
    "ASYNC109", # trio-async-function-with-timeout
    "SIM117",   # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # undocumented-public-module
    "D103",  # undocumented-public-function
    "D107",  # undocumented-public-init
]

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-report=term-missing --cov=statusbot"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source_pkgs = ["statusbot"]
omit = [
    "__init__.py",
]
parallel = true
relative_files = true
source = ["."]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]
